[package]
name = "captur"
version = "0.1.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
description = "Macro to capture whole structs from disjoint fields in a closure."
repository = "https://github.com/MitMaro/captur"
documentation = "https://docs.rs/captur/"
keywords = [ "macro", "capture", "struct" ]
categories = ["rust-patterns"]
readme = "README.md"
license = "ISC"
include = [
	"**/*.rs",
	"/Cargo.toml",
	"/CHANGELOG.md",
	"/LICENSE",
	"/README.md"
]
edition = "2018"

[lib]
name = "captur"
